# lusid

./: AGENTS.md  Cargo.toml  PLAN.md  README.md  TODO.md  justfile
apply-stdio/: README.md
apply-stdio/src/: lib.rs
causality/: README.md
causality/src/: epoch.rs  lib.rs  tree.rs
cmd/: Cargo.toml  README.md
cmd/src/: lib.rs
ctx/: Cargo.toml  README.md
ctx/src/: lib.rs  paths.rs
examples/: README.md  apt-repo-docker.lusid  lusid.toml  simple-arch.lusid  simple-debian.lusid  simple.lusid  with-secrets.lusid
examples/arch-desktop/: README.md  desktop.lusid  lusid.toml
examples/dotfiles/: README.md  dotfiles.lusid  lusid.toml
examples/dotfiles/files/: zshrc
examples/dotfiles/files/helix/: config.toml
examples/nginx-cluster/: README.md  lusid.toml  web-server.lusid
fs/: Cargo.toml  README.md
fs/src/: lib.rs
http/: README.md
http/src/: lib.rs
lusid/: Cargo.toml  README.md
lusid-apply/: Cargo.toml  README.md
lusid-apply/src/: lib.rs  main.rs
lusid/examples/: multi.rs  simple.rs
lusid/src/: config.rs  lib.rs  main.rs  tui.rs
machine/: README.md
machine/src/: lib.rs
operation/: Cargo.toml  README.md
operation/src/: lib.rs
operation/src/operations/: apt.rs  apt_repo.rs  brew.rs  command.rs  directory.rs  file.rs  git.rs  group.rs  mod.rs  pacman.rs  podman.rs  systemd.rs  systemd_service.rs  user.rs
params/: Cargo.toml  README.md
params/src/: lib.rs  parse.rs
plan/: Cargo.toml  README.md
plan/src/: core.rs  eval.rs  id.rs  lib.rs  load.rs  model.rs  tree.rs
resource/: Cargo.toml  README.md
resource/src/: lib.rs
resource/src/resources/: apt.rs  apt_repo.rs  brew.rs  command.rs  directory.rs  file.rs  git.rs  group.rs  mod.rs  pacman.rs  podman.rs  secret.rs  systemd.rs  systemd_service.rs  user.rs
rimu-interop/: Cargo.toml  README.md
rimu-interop-macros/: Cargo.toml
rimu-interop-macros/src/: lib.rs
rimu-interop/src/: error.rs  from_rimu.rs  from_rimu_impls.rs  lib.rs  to_rimu.rs
rimu-interop/tests/: derive.rs
secrets/: Cargo.toml  DESIGN.md  README.md
secrets/src/: alias.rs  check.rs  cli.rs  crypto.rs  decrypt_all.rs  decrypt_dir.rs  identity.rs  key.rs  lib.rs  load.rs  recipients.rs  redactor.rs  reencrypt.rs  secrets.rs
ssh/: Cargo.toml  README.md
ssh/src/: command.rs  connect.rs  keypair.rs  lib.rs  session.rs  stream.rs  sync.rs
store/: README.md
store/src/: lib.rs
system/: Cargo.toml  README.md
system/src/: arch.rs  hardware.rs  id.rs  lib.rs  os.rs  user.rs
tree/: README.md
tree/src/: lib.rs
view/: README.md
view/src/: lib.rs  render.rs  tree.rs
view/src/view/: fragment.rs  line.rs  mod.rs  paragraph.rs  span.rs  text.rs
vm/: Cargo.toml  README.md  images.toml
vm-test/: Cargo.toml  README.md
vm-test-macros/: Cargo.toml
vm-test-macros/src/: lib.rs
vm-test/src/: apply.rs  binary.rs  driver.rs  lib.rs  machines.rs  node.rs  runner.rs
vm-test/tests/: apt_repo.rs
vm/src/: context.rs  lib.rs  paths.rs
vm/src/image/: hash.rs  index.rs  mod.rs
vm/src/instance/: mod.rs  paths.rs  start.rs
vm/src/instance/setup/: mod.rs  overlay.rs
vm/src/qemu/: mod.rs
