[workspace]
resolver = "3"
members = [
  "apply-stdio",
  "causality",
  "cmd",
  "ctx",
  "fs",
  "http",
  "lusid",
  "lusid-apply",
  "machine",
  "operation",
  "params",
  "plan",
  "rimu-interop",
  "resource",
  "secrets",
  "ssh",
  "store",
  "system",
  "vm",
  "view", "tree",
]

[workspace.dependencies]
age = "0.11.2"
async-trait = "0.1.89"
clap = { version = "4.5.52", features = ["derive", "env"] }
displaydoc = "0.2.5"
indexmap = "2.12.0"
nix = { version = "0.30.1", features = ["signal", "user"] }
rimu = { version = "0.2.0", git = "https://github.com/ahdinosaur/rimu", branch = "tagged" }
russh = "0.60"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145", features = ["indexmap"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
url = "2.5.7"
