[package]
name = "lusid-apply"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-apply-stdio = { path = "../apply-stdio", version = "0.1" }
lusid-causality = { path = "../causality", version = "0.1" }
lusid-ctx = { path = "../ctx", version = "0.1" }
lusid-params = { path = "../params", version = "0.1" }
lusid-plan = { path = "../plan", version = "0.1" }
lusid-operation = { path = "../operation", version = "0.1" }
lusid-resource = { path = "../resource", version = "0.1" }
lusid-store = { path = "../store", version = "0.1" }
lusid-system = { path = "../system", version = "0.1" }
lusid-tree = { path = "../tree", version = "0.1" }
lusid-view = { path = "../view", version = "0.1" }
clap.workspace = true
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
