[package]
name = "lusid"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-apply-stdio = { path = "../apply-stdio", version = "0.1" }
lusid-cmd = { path = "../cmd", version = "0.1" }
lusid-ctx = { path = "../ctx", version = "0.1" }
lusid-machine = { path = "../machine", version = "0.1" }
lusid-params = { path = "../params", version = "0.1" }
lusid-secrets = { path = "../secrets", version = "0.1" }
lusid-ssh = { path = "../ssh", version = "0.1" }
lusid-store = { path = "../store", version = "0.1" }
lusid-system = { path = "../system", version = "0.1" }
lusid-view = { path = "../view", version = "0.1" }
lusid-vm = { path = "../vm", version = "0.1" }
comfy-table = "7.2.1"
clap.workspace = true
crossterm = "0.27"
ratatui = "0.29"
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.9.8"
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
which = "8.0.0"
