[package]
name = "lusid-operation"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-cmd = { path = "../cmd", version = "0.1" }
lusid-ctx = { path = "../ctx", version = "0.1" }
lusid-fs = { path = "../fs", version = "0.1" }
lusid-http = { path = "../http", version = "0.1" }
lusid-view = { path = "../view", version = "0.1" }
rimu-interop = { path = "../rimu-interop", version = "0.1" }
async-trait.workspace = true
pin-project = "1.1.10"
rimu.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
url.workspace = true
