[package]
name = "lusid-plan"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-causality = { path = "../causality", version = "0.1" }
lusid-params = { path = "../params", version = "0.1" }
lusid-operation = { path = "../operation", version = "0.1" }
lusid-resource = { path = "../resource", version = "0.1" }
lusid-store = { path = "../store", version = "0.1" }
lusid-system = { path = "../system", version = "0.1" }
lusid-tree = { path = "../tree", version = "0.1" }
lusid-view = { path = "../view", version = "0.1" }
cuid2 = "0.1.4"
displaydoc.workspace = true
rimu.workspace = true
rimu-interop = { path = "../rimu-interop", version = "0.1" }
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
