[package]
name = "lusid-resource"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-causality = { path = "../causality", version = "0.1" }
lusid-cmd = { path = "../cmd", version = "0.1" }
lusid-ctx = { path = "../ctx", version = "0.1" }
lusid-fs = { path = "../fs", version = "0.1" }
lusid-params = { path = "../params", version = "0.1" }
lusid-operation = { path = "../operation", version = "0.1" }
lusid-view = { path = "../view", version = "0.1" }
async-trait.workspace = true
futures-util = "0.3.31"
indexmap.workspace = true
rimu.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
