[package]
name = "rimu-interop"
version = "0.1.0"
edition = "2024"

[dependencies]
rimu-interop-macros = { path = "../rimu-interop-macros", version = "0.1" }
displaydoc.workspace = true
indexmap.workspace = true
rimu.workspace = true
rust_decimal = "1.39"
serde.workspace = true
thiserror.workspace = true
