[package]
name = "lusid-secrets"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-params = { path = "../params", version = "0.1" }
age = { workspace = true, features = ["ssh"] }
age-core = "0.11"
clap.workspace = true
displaydoc.workspace = true
indexmap = { workspace = true, features = ["serde"] }
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process"] }
toml = "0.9.8"
tracing.workspace = true
