[package]
name = "lusid-secrets"
version = "0.1.0"
edition = "2024"

[dependencies]
age = { workspace = true, features = ["ssh"] }
age-core.workspace = true
displaydoc.workspace = true
secrecy.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
