[package]
name = "lusid-secrets"
version = "0.1.0"
edition = "2024"

[dependencies]
age = { workspace = true, features = ["ssh"] }
age-core.workspace = true
clap.workspace = true
displaydoc.workspace = true
indexmap = { workspace = true, features = ["serde"] }
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
