[package]
name = "lusid-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-fs = { path = "../fs", version = "0.1" }
async-promise = "0.1.0"
base64ct = "1.6.0"
bytes = "1"
futures-util = "0.3.31"
russh.workspace = true
russh-sftp = "2.1.1"
thiserror.workspace = true
termion = "4.0.6"
tokio.workspace = true
tracing.workspace = true
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
zeroize = "1"
