[package]
name = "lusid-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
lusid-cmd = { path = "../cmd", version = "0.1" }
lusid-ctx = { path = "../ctx", version = "0.1" }
lusid-fs = { path = "../fs", version = "0.1" }
lusid-http = { path = "../http", version = "0.1" }
lusid-machine = { path = "../machine", version = "0.1" }
lusid-ssh = { path = "../ssh", version = "0.1" }
lusid-system = { path = "../system", version = "0.1" }
nix.workspace = true
russh.workspace = true
serde.workspace = true
serde-saphyr = "0.0.8-alpha-pre"
serde_json = "1"
sha2 = "0.10.9"
thiserror.workspace = true
tokio.workspace = true
toml = "0.9.8"
which = "8.0.0"
tracing.workspace = true
